tests/fail/namespace-att6.dit
A {
    String value;
}

B {
    A a;
}

B b;

b.a = [];